# apple-fm-wrapper

./: README.md  pyproject.toml
afm/: cli.py  server.py
